force-app/main/default/objects/Sharing_Audit__c/Sharing_Audit__c.object-meta.xml
<CustomObject>
    <label>Sharing Audit</label>
    <nameField>
        <displayFormat>AUDIT-{0000}</displayFormat>
        <label>Sharing Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sharing Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>