force-app/main/default/objects/Sharing_Audit__c/fields/Access_Removed__c.field-meta.xml
<CustomField>
    <fullName>Access_Removed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Access Removed</label>
    <type>Checkbox</type>
</CustomField>