force-app/main/default/objects/Sharing_Audit__c/fields/Grant_Date__c.field-meta.xml
<CustomField>
    <fullName>Grant_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Grant Date</label>
    <type>DateTime</type>
</CustomField>