force-app/main/default/objects/Sharing_Audit__c/fields/Granted_By__c.field-meta.xml
<CustomField>
    <fullName>Granted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Granted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sharing_Audits1</relationshipName>
    <type>Lookup</type>
</CustomField>