force-app/main/default/objects/Sharing_Audit__c/fields/Private_Client__c.field-meta.xml
<CustomField>
    <fullName>Private_Client__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Private Client</label>
    <referenceTo>Private_Client__c</referenceTo>
    <relationshipLabel>Sharing Audits</relationshipLabel>
    <relationshipName>Sharing_Audits</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>