force-app/main/default/objects/Sharing_Audit__c/fields/Removal_Date__c.field-meta.xml
<CustomField>
    <fullName>Removal_Date__c</fullName>
    <label>Removal Date</label>
    <type>DateTime</type>
</CustomField>